Fixed header overflow on iOS

--- a/css/main.css
+++ b/css/main.css
@@ -548,9 +548,7 @@ body {
       .content .playlist .search-container form .search-field::-webkit-input-placeholder, .content .playlist .search-container form .search-field:-moz-placeholder, .content .playlist .search-container form .search-field::-moz-placeholder, .content .playlist .search-container form .search-field:-ms-input-placeholder {
         text-align: center; }
   .content .playlist .song-container {
-    position: relative;
-    overflow: auto;
-    -webkit-overflow-scrolling: touch; }
+    position: relative; }
     .content .playlist .song-container .play-button {
       cursor: pointer;
       width: 60px;
@@ -570,7 +568,9 @@ body {
       padding-top: 0.75rem;
       float: left;
       height: 58px;
-      max-width: calc(100% - 70px); }
+      max-width: calc(100% - 70px);
+      overflow: auto;
+      -webkit-overflow-scrolling: touch; }
       .content .playlist .song-container .info-wrapper .title, .content .playlist .song-container .info-wrapper .artist {
         white-space: nowrap;
         overflow: hidden; }
